--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="google-play">
                 <a href="">
-                    <img src="resources/img/google-play-logo-nuevo.png" class="logo">
+                    <img src="resources/img/logo-github.webp" class="logo">
                 </a>
                 
             </div>
@@ -108,10 +108,7 @@ anime({
     easing: 'linear',
     loop: true
 });
-utils.set({
-    targets: '.snow',
-    x: () => utils.random(2, 18, 2) + 'rem',
-});
+
 
 </script>
 </html>
