--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul id="links">
             <li class="links"><a href="#" class="transportador rojo">Inicio</a></li><!--Te envia al inicio-->
             <li class="links"><a href="#proyectos" class="transportador naranjo">Proyectos</a></li><!--Te envia al Proyectos-->
-            <li class="links"><a href="#" class="transportador amarillo">Habilidades</a></li><!--Te envia al Habilidades-->
+            <li class="links"><a href="#habilidades" class="transportador amarillo">Habilidades</a></li><!--Te envia al Habilidades-->
             <li class="links"><a href="#" class="transportador azul">Contacto</a></li><!--Te envia al Contacto-->
         </ul>
         <div class="linea_rgb"></div>
@@ -50,18 +50,18 @@
         </div>
         <div class="containerR">
             <div class="youtube">
-                <a href="http://">
+                <a href="https://martin6232.github.io/">
                     <img src="resources/img/descargar.jpg" class="logo">
                 </a>
             </div>
             <div class="google-play">
-                <a href="">
+                <a href="https://github.com/Martin6232/Google_Play">
                     <img src="resources/img/google-play-logo-nuevo.png" class="logo">
                 </a>
                 
             </div>
             <div class="google-play">
-                <a href="">
+                <a href="https://github.com/Martin6232/desarollo-web-2025">
                     <img src="resources/img/logo-github.webp" class="logo">
                 </a>
                 
@@ -75,6 +75,51 @@
         <div class="snow"></div>
     </section>
     <!--Habilidades-->
+    <section id="habilidades">
+        <div class="containerh">
+            <h1 class="titulo">Durante mis estudios aprendi sobre distintos<br>lenguajes de programación</h1>
+            <section class="cont">
+                <section class="izquierda">
+            <div class="habilidad">
+                <h4>HTML: 60%</h4>
+                <div class="barra">
+                    <div class="progreso html"></div>
+                    <div class="faltante"></div>
+                </div>
+            </div>
+            <div class="habilidad">
+                <h4>CSS: 60%</h4>
+                <div class="barra">
+                    <div class="progreso css"></div>
+                    <div class="faltante"></div>
+                </div>
+            </div>
+            <div class="habilidad">
+                <h4>MySQL: 60%</h4>
+                <div class="barra">
+                    <div class="progreso mysql"></div>
+                    <div class="faltante"></div>
+                </div>
+            </div>
+            <div>
+                <h4>JS: 40%</h4>
+                <div class="barra">
+                    <div class="progreso js"></div>
+                    <div class="faltante"></div>
+                </div>
+            </div>
+            </section>
+            <section class="derecha">
+            <div class="habilidad">
+                <h4>Python: 20%</h4>
+                <div class="barra">
+                    <div class="progreso python"></div>
+                    <div class="faltante"></div>
+                </div>
+            </section>
+            </section>
+        </div>
+    </section>
 </body>
 <script src="static/js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -85,6 +130,7 @@ const orbit = document.querySelector('#orbit');
 const orbit2 = document.querySelector('#orbit2');
 const orbit3 = document.querySelector('#orbit3');
 const snow = document.querySelector('.snow');
+const snow = document.querySelector('.logo');
 anime({
     targets: orbit,
     rotate: '360deg',
@@ -108,7 +154,23 @@ anime({
     easing: 'linear',
     loop: true
 });
+anime({
+    targets: '.snow',
+    translateY: random(800, 1200),
+    duration: 5000,
+    easing: 'linear',
+    loop: true,
+});
 
+function scaleplus(){
+    anime({
+        targets: '.logo',
+        scale: 1.1,
+        rotate: 360,
+        duration: 300,
+        easing: 'easeInOutQuad',
+    });
+}
 
 </script>
 </html>
