--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ const orbit = document.querySelector('#orbit');
 const orbit2 = document.querySelector('#orbit2');
 const orbit3 = document.querySelector('#orbit3');
 const snow = document.querySelector('.snow');
-const snow = document.querySelector('.logo');
+const logo = document.querySelector('.logo');
 anime({
     targets: orbit,
     rotate: '360deg',
