--- a/prueba.html
+++ b/prueba.html
@@ -4,82 +4,131 @@
   <meta charset="UTF-8">
   <title>Sistema Solar con Anime.js</title>
 <body>
-  <div class="small justified row">
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
+  <div class="stagger-visualizer">
+  <div class="cursor red"></div>
 </div>
-<div class="small justified row">
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-</div>
-<div class="small justified row">
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-</div>
-<div class="small justified row">
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-  <div class="square"></div>
-</div>
+<style>
+  body {
+  --rows: 41;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.stagger-visualizer {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: calc(var(--rows) * 1rem);
+  height: calc(var(--rows) * 1rem);
+}
+
+.stagger-visualizer .dot {
+  position: relative;
+  width: .25rem;
+  height: .25rem;
+  margin: .375rem;
+  background-color: currentColor;
+  border-radius: 50%;
+}
+
+.stagger-visualizer .cursor {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 1rem;
+  height: 1rem;
+  background-color: currentColor;
+  border-radius: 50%;
+}
+</style>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js">
 </script>
 <script>
 
-const $squares = document.querySelector('.square');
+import { createTimeline, utils, stagger } from 'https://esm.sh/animejs';
+
+const staggerVisualizerEl = document.querySelector('.stagger-visualizer');
+const fragment = document.createDocumentFragment();
+const rows = +utils.get(document.body, '--rows');
+const grid = [rows, rows];
+const numberOfElements = rows * rows;
+var animation;
+
+for (let i = 0; i < numberOfElements; i++) {
+  const dotEl = document.createElement('div');
+  dotEl.classList.add('dot');
+  fragment.appendChild(dotEl);
+}
+
+staggerVisualizerEl.appendChild(fragment);
+
+let index = utils.random(0, numberOfElements);
+let nextIndex = 0;
+
+utils.set('.cursor', {
+  x: stagger('-1rem', {grid, from: index, axis: 'x'}),
+  y: stagger('-1rem', {grid, from: index, axis: 'y'})
+});
 
 function animateGrid() {
-  animate($squares, {
-    scale: [
-      { to: [0, 1.25] },
-      { to: 0 }
-    ],
-    boxShadow: [
-      { to: '0 0 1rem 0 currentColor' },
-      { to: '0 0 0rem 0 currentColor' }
-    ],
-    delay: stagger(100, {
-      grid: [11, 4],
-      from: utils.random(0, 11 * 4)
-    }),
+
+  if (animation) animation.pause();
+
+  nextIndex = utils.random(0, numberOfElements);
+
+  animation = createTimeline({
+    defaults: {
+      ease: 'inOutQuad',
+    },
     onComplete: animateGrid
-  });
+  })
+  .add('.cursor', {
+    keyframes: [
+      { scale: .625 },
+      { scale: 1.125 },
+      { scale: 1 }
+    ],
+    duration: 600
+  })
+  .add('.dot', {
+    keyframes: [
+      {
+        x: stagger('-.175rem', {grid, from: index, axis: 'x'}),
+        y: stagger('-.175rem', {grid, from: index, axis: 'y'}),
+        duration: 200
+      }, {
+        x: stagger('.125rem', {grid, from: index, axis: 'x'}),
+        y: stagger('.125rem', {grid, from: index, axis: 'y'}),
+        scale: 2,
+        duration: 500
+      }, {
+        x: 0,
+        y: 0,
+        scale: 1,
+        duration: 600,
+      }
+    ],
+    delay: stagger(50, {grid, from: index}),
+  }, 0)
+  .add('.cursor', {
+    x: { from: stagger('-1rem', {grid, from: index, axis: 'x'}), to: stagger('-1rem', {grid, from: nextIndex, axis: 'x'}), duration: utils.random(800, 1200) },
+    y: { from: stagger('-1rem', {grid, from: index, axis: 'y'}), to: stagger('-1rem', {grid, from: nextIndex, axis: 'y'}), duration: utils.random(800, 1200) },
+    ease: 'outCirc'
+  }, '-=1500')
+
+  index = nextIndex;
+
 }
+
+animateGrid();
+
 
 animateGrid();
 </script>
